# fintextanalytics

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/fintextanalytics/: index.doctree
docs/_build/doctrees/autoapi/fintextanalytics/embeddingmodels/: index.doctree
docs/_build/doctrees/autoapi/fintextanalytics/frequencymodels/: index.doctree
docs/_build/doctrees/autoapi/fintextanalytics/utils/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/fintextanalytics/: embeddingmodels.html  frequencymodels.html  utils.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/fintextanalytics/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/fintextanalytics/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/fintextanalytics/: __init__.py  embeddingmodels.py  frequencymodels.py  testing.ipynb  utils.py
src/fintextanalytics/data/: apple_10k_reportitems.csv  d2v_10K_long.pkl  example_text.txt
tests/: test_fintextanalytics.py
(+6 files in other folders)
